# internship-finder

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  compose.yaml  config.example.yaml  package-lock.json  package.json  pyproject.toml  requirements.txt  run_scanner.bat  setup_task.ps1
app/: __init__.py  config.py  logging_config.py  main.py
app/extract/: __init__.py  canonical.py  dates.py  normalize.py
app/filtering/: __init__.py  rules.py  taxonomy.py
app/llm/: __init__.py  claude_client.py  prompts.py  schema.py
app/profile/: __init__.py  documents.py  seeker.py
app/reporting/: __init__.py  emailer.py  render.py
app/sources/: __init__.py  accelerators.py  ashby.py  claude_search.py  generic_html.py  greenhouse.py  grok_search.py  lever.py  linkedin_search.py  openai_search.py  search_provider.py  workday.py
app/storage/: __init__.py  state.py
config/: seeking-original.txt
tests/: __init__.py  conftest.py  test_rules.py  test_taxonomy.py
tests/fixtures/: postings.json
